Se agrega nuevo footer

--- a/file_01.html
+++ b/file_01.html
@@ -98,7 +98,10 @@ h1,h2,h3,h4,h5,h6 {
   
 <!-- End page content -->
 </div>
-
+<footer>
+About
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+</footer>
 
 
 </body>
